--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav><i class="fa fa-camera-retro fa-5x"></i></nav>
+        <nav></nav>
     </header>
     <main>
         <section></section>
