--- a/index.html
+++ b/index.html
@@ -10,20 +10,62 @@
     <meta property="og:description" content="One page website using simple css class for mobile optimization..." />
     <link rel="stylesheet" href="assets/css/w3css.css">
     <link rel="stylesheet" href="assets/css/font-awesome.css">
+    <style>
+        html{
+            scroll-behavior: smooth;
+        }
+        main{
+            margin-top: 150px;
+        }
+        section{
+            scroll-margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav></nav>
+    <header class="w3-top w3-white">
+        <nav id="desktopNav" class="w3-bar">
+        <a href="javascript:void(0)" onclick="toogleNavbar()" class="w3-bar-item w3-button w3-hide-large w3-hide-medium w3-right">
+            <i class="fa fa-bars"></i>
+        </a>
+        <a href="#home" class="w3-bar-item w3-button">Home</a>
+        <a href="#about" class="w3-bar-item w3-button w3-hide-small">About</a>
+        <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small">Portfolio</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-hide-small">Contact</a>
+        </nav>
+
+        <nav id="mobileNav" class="w3-bar-block w3-white w3-hide-large w3-hide-medium w3-hide">
+            <a href="#about" onclick="toogleNavbar()" class="w3-bar-item w3-button">About</a>
+            <a href="#portfolio" onclick="toogleNavbar()" class="w3-bar-item w3-button">Portfolio</a>
+            <a href="#contact" onclick="toogleNavbar()" class="w3-bar-item w3-button">Contact</a>
+        </nav>
     </header>
     <main>
-        <section></section>
-        <section>
-            <article></article>
-            <article></article>
-            <article></article>
+        <section id="home"></section>
+        <section id="about">
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptatum impedit qui accusamus natus quam quis eius sit magni, odit asperiores! Ex alias unde soluta consequuntur autem accusamus aliquid debitis, dolorem aut rerum esse quos, quisquam excepturi dolore voluptatibus laudantium fugit cumque, ab reiciendis ducimus voluptatem mollitia. Beatae nihil nostrum ut earum accusantium alias autem ipsa debitis, quod dicta, voluptatem molestiae? Tempora, accusantium nemo quibusdam vitae quos nesciunt pariatur velit accusamus totam explicabo excepturi fuga fugit ab voluptas. Architecto modi iste ipsam similique ab at neque, commodi quos. Eligendi, beatae. Suscipit voluptatibus culpa tempora. Delectus dignissimos eos culpa aliquam provident cum voluptatibus, laboriosam quae ab, ea rerum blanditiis. Eveniet officiis tempora culpa, ullam ex molestias ad laborum quidem obcaecati molestiae dolor voluptatibus nesciunt. Soluta, error sed! Laboriosam veritatis aliquam dolor corporis pariatur exercitationem quod perspiciatis placeat, esse dolorum neque temporibus repellat nam, sunt voluptatum commodi nisi totam quo? Molestiae hic facere repudiandae ut quod at commodi, voluptatum ipsam odit quis accusantium temporibus eveniet dignissimos ipsa explicabo reprehenderit libero culpa omnis facilis, necessitatibus eligendi numquam? Aperiam harum quidem quos blanditiis. Recusandae natus praesentium excepturi soluta, magnam beatae, cupiditate ducimus inventore laboriosam voluptatum fugit rerum sunt. Dolor, distinctio ratione. Obcaecati, rerum illum.</p>
         </section>
-        <section></section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <article></article>
+            <article></article>
+            <article></article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptatum impedit qui accusamus natus quam quis eius sit magni, odit asperiores! Ex alias unde soluta consequuntur autem accusamus aliquid debitis, dolorem aut rerum esse quos, quisquam excepturi dolore voluptatibus laudantium fugit cumque, ab reiciendis ducimus voluptatem mollitia. Beatae nihil nostrum ut earum accusantium alias autem ipsa debitis, quod dicta, voluptatem molestiae? Tempora, accusantium nemo quibusdam vitae quos nesciunt pariatur velit accusamus totam explicabo excepturi fuga fugit ab voluptas. Architecto modi iste ipsam similique ab at neque, commodi quos. Eligendi, beatae. Suscipit voluptatibus culpa tempora. Delectus dignissimos eos culpa aliquam provident cum voluptatibus, laboriosam quae ab, ea rerum blanditiis. Eveniet officiis tempora culpa, ullam ex molestias ad laborum quidem obcaecati molestiae dolor voluptatibus nesciunt. Soluta, error sed! Laboriosam veritatis aliquam dolor corporis pariatur exercitationem quod perspiciatis placeat, esse dolorum neque temporibus repellat nam, sunt voluptatum commodi nisi totam quo? Molestiae hic facere repudiandae ut quod at commodi, voluptatum ipsam odit quis accusantium temporibus eveniet dignissimos ipsa explicabo reprehenderit libero culpa omnis facilis, necessitatibus eligendi numquam? Aperiam harum quidem quos blanditiis. Recusandae natus praesentium excepturi soluta, magnam beatae, cupiditate ducimus inventore laboriosam voluptatum fugit rerum sunt. Dolor, distinctio ratione. Obcaecati, rerum illum.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptatum impedit qui accusamus natus quam quis eius sit magni, odit asperiores! Ex alias unde soluta consequuntur autem accusamus aliquid debitis, dolorem aut rerum esse quos, quisquam excepturi dolore voluptatibus laudantium fugit cumque, ab reiciendis ducimus voluptatem mollitia. Beatae nihil nostrum ut earum accusantium alias autem ipsa debitis, quod dicta, voluptatem molestiae? Tempora, accusantium nemo quibusdam vitae quos nesciunt pariatur velit accusamus totam explicabo excepturi fuga fugit ab voluptas. Architecto modi iste ipsam similique ab at neque, commodi quos. Eligendi, beatae. Suscipit voluptatibus culpa tempora. Delectus dignissimos eos culpa aliquam provident cum voluptatibus, laboriosam quae ab, ea rerum blanditiis. Eveniet officiis tempora culpa, ullam ex molestias ad laborum quidem obcaecati molestiae dolor voluptatibus nesciunt. Soluta, error sed! Laboriosam veritatis aliquam dolor corporis pariatur exercitationem quod perspiciatis placeat, esse dolorum neque temporibus repellat nam, sunt voluptatum commodi nisi totam quo? Molestiae hic facere repudiandae ut quod at commodi, voluptatum ipsam odit quis accusantium temporibus eveniet dignissimos ipsa explicabo reprehenderit libero culpa omnis facilis, necessitatibus eligendi numquam? Aperiam harum quidem quos blanditiis. Recusandae natus praesentium excepturi soluta, magnam beatae, cupiditate ducimus inventore laboriosam voluptatum fugit rerum sunt. Dolor, distinctio ratione. Obcaecati, rerum illum.</p>
+        </section>
     </main>
     <footer></footer>
+    <script>
+        function toogleNavbar()
+        {
+            var nav = document.getElementById("mobileNav");
+            nav.classList.toggle("w3-show");
+            // console.log(nav.classList);
+        }
+    </script>
 </body>
 </html>
