--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <!-- MAIN START -->
     <main class="w3-container">
         <!-- HOME SECTION START -->
-        <section id="home"></section>
+        <section id="home">
+            <h1>MY SUPER MOBILE WEBSITE</h1>
+        </section>
 
         <!-- ABOUT SECTION START -->
         <section id="about">
