--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h2 class="w3-display-middle">PORTFOLIO</h2>
         </div>
 
-        <section class="w3-container">
+        <section class="w3-container" data-aos="fade-up">
 
             <div class="w3-row-padding">
                 <article class="w3-col m4 w3-center">
